--- a/style.css
+++ b/style.css
@@ -31,5 +31,9 @@ main {
 section {
   min-height: 100vh;
   padding: 20px;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
